--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "arithmetic-game",
   "version": "0.1.0",
+  "homepage": "https://jochshen.github.io/MultiPlayerArithmetic/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,7 +17,7 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
   },
   "eslintConfig": {
     "extends": [
